--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,6 +330,7 @@ body {
   line-height: 1.4;
   color: rgb(var(--body-color));
   font-size: 16px;
+  font-weight: 500;
 }
 
 @media (max-width: 991px) {
@@ -994,6 +995,7 @@ Reusable style section start
   flex-direction: column;
   box-shadow: var(--shadow4);
   gap: 15px;
+  height: 100%;
 }
 .cmn-box .icon-box {
   width: 48px;
@@ -1003,7 +1005,7 @@ Reusable style section start
   align-items: center;
   justify-content: center;
   color: rgb(var(--primary-color));
-  font-size: 20px;
+  font-size: 22px;
   border-radius: 8px;
 }
 .cmn-box .text-box .title {
@@ -4992,6 +4994,71 @@ Hero section end
 Calculator end
 ----------------------------------------------*/
 /*----------------------------------------------
+Custom radio container start
+----------------------------------------------*/
+.custom-radio-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+.custom-radio-container .item {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+}
+.custom-radio-container .form-check-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 20px 16px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: var(--transition);
+  gap: 15px;
+  border: 2px solid var(--border-color2);
+  background-color: rgb(var(--bg-color1));
+  font-family: var(--silkscreen-font);
+  color: rgb(var(--mostly-desaturated-dark-blue));
+}
+.custom-radio-container .form-check-label:hover {
+  border-color: rgb(var(--primary-color));
+}
+.custom-radio-container .form-check-label .content-box .title {
+  text-transform: uppercase;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.custom-radio-container .form-check-label .content-box .title img {
+  width: 24px;
+}
+.custom-radio-container .form-check-input {
+  position: absolute;
+  right: 15px;
+  margin-top: 0;
+  clip: rect(0, 0, 0, 0);
+  pointer-events: none;
+}
+.custom-radio-container .form-check-input[type=radio]:checked + .form-check-label {
+  background-color: rgb(var(--primary-color), 0.1);
+  border-color: rgb(var(--primary-color));
+}
+
+@media (max-width: 767px) {
+  .custom-radio-container {
+    margin-top: 30px;
+  }
+}
+/*----------------------------------------------
+Custom radio container end
+----------------------------------------------*/
+/*----------------------------------------------
 About section start
 ----------------------------------------------*/
 .about-section {
@@ -5013,7 +5080,7 @@ Feature section start
 }
 
 .feature-img-box {
-  max-width: 450px;
+  max-width: 400px;
 }
 
 /*----------------------------------------------
@@ -5180,69 +5247,86 @@ How it works section start
 How it works section end
 ----------------------------------------------*/
 /*----------------------------------------------
-Custom radio container start
+Why choose us section start
 ----------------------------------------------*/
-.custom-radio-container {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  flex-wrap: wrap;
+.why-choose-us-section {
+  background-image: radial-gradient(50% 50% at 50% 50%, rgba(255, 169, 139, 0.1) 20%, rgba(255, 169, 139, 0) 100%);
+  background-attachment: fixed;
 }
-.custom-radio-container .item {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-grow: 1;
-}
-.custom-radio-container .form-check-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 20px 16px;
-  cursor: pointer;
-  border-radius: 10px;
-  transition: var(--transition);
-  gap: 15px;
-  border: 2px solid var(--border-color2);
-  background-color: rgb(var(--bg-color1));
-  font-family: var(--silkscreen-font);
-  color: rgb(var(--mostly-desaturated-dark-blue));
-}
-.custom-radio-container .form-check-label:hover {
-  border-color: rgb(var(--primary-color));
-}
-.custom-radio-container .form-check-label .content-box .title {
-  text-transform: uppercase;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-.custom-radio-container .form-check-label .content-box .title img {
-  width: 24px;
-}
-.custom-radio-container .form-check-input {
-  position: absolute;
-  right: 15px;
-  margin-top: 0;
-  clip: rect(0, 0, 0, 0);
-  pointer-events: none;
-}
-.custom-radio-container .form-check-input[type=radio]:checked + .form-check-label {
-  background-color: rgb(var(--primary-color), 0.1);
-  border-color: rgb(var(--primary-color));
+.why-choose-us-section .cmn-box {
+  box-shadow: rgba(44, 91, 255, 0.1) 0px 12px 17px 0px;
+  border: 2px solid rgb(var(--primary-color), 0.2);
 }
 
-@media (max-width: 767px) {
-  .custom-radio-container {
-    margin-top: 30px;
+/*----------------------------------------------
+Why choose us section end
+----------------------------------------------*/
+/*----------------------------------------------
+08. Testimonial section start
+----------------------------------------------*/
+.testimonial-section {
+  background-image: radial-gradient(50% 50% at 50% 50%, rgba(255, 169, 139, 0.1) 20%, rgba(255, 169, 139, 0) 100%);
+}
+
+.testimonial-box {
+  position: relative;
+  padding: 25px 20px 45px;
+  background: rgb(var(--bg-color1));
+  border-radius: 20px;
+  transition: var(--transition);
+  border: 2px solid rgb(var(--primary-color), 0.5);
+  box-shadow: rgba(44, 91, 255, 0.1) 0px 12px 17px 0px;
+}
+.testimonial-box .text-box {
+  font-size: 20px;
+}
+.testimonial-box .profile-box {
+  position: absolute;
+  bottom: -50px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+.testimonial-box .profile-title {
+  font-weight: 600;
+  font-size: 18px;
+  margin-top: 20px;
+}
+.testimonial-box .profile-thumbs img {
+  width: 70px;
+  min-width: 70px;
+  height: 70px;
+  padding: 1px;
+  border-radius: 50%;
+  background-color: rgb(var(--white));
+  border: 2px solid rgb(var(--primary-color), 0.5);
+}
+
+.testimonial-carousel .item {
+  padding-bottom: 50px;
+  padding-top: 5px;
+}
+
+@media (max-width: 991px) {
+  .testimonial-section .section-header {
+    text-align: center;
   }
 }
+@media (max-width: 575px) {
+  .testimonial-inner {
+    padding: 0;
+  }
+}
+@media (min-width: 1400px) {
+  .rtl .testimonial-section .left-side .img-box {
+    margin-left: -100px;
+    margin-right: 0;
+  }
+}
+
 /*----------------------------------------------
-Custom radio container end
+Testimonial end
 ----------------------------------------------*/
 /*----------------------------------------------
 17. Faq section start
@@ -5252,8 +5336,8 @@ Custom radio container end
 }
 .faq-section .accordion-button {
   color: rgb(var(--heading-color));
-  font-weight: 500;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 20px;
   border-radius: 10px !important;
 }
 .faq-section .accordion-button:focus {
@@ -5266,9 +5350,7 @@ Custom radio container end
 }
 .faq-section .accordion-item {
   margin: 10px 0;
-  border-radius: 10px;
   border: none;
-  background-color: var(--bg-color2);
 }
 .faq-section .accordion-button::after {
   background: url(../img/accordion/plus.png);
@@ -5289,6 +5371,10 @@ Custom radio container end
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 5px;
+}
+.faq-section .accordion-body {
+  font-size: 18px;
+  color: rgb(var(--body-color));
 }
 
 .rtl .accordion-button {
