--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ Typography
   --input-color2: #ffffff;
   --bg-color1: 255, 255, 255;
   --bg-color2: 249, 250, 251;
+  --bg-color3: 14, 15, 20;
   --border-color1: rgba(231, 234, 243, 0.7);
   --border-color2: rgba(140, 152, 164, 0.25);
   --shadow1: 0 0.375rem 0.75rem rgba(140, 152, 164, 0.075);
@@ -258,6 +259,16 @@ h1 {
     line-height: 50px;
   }
 }
+@media (max-width: 460px) {
+  h1 {
+    font-size: 32px;
+  }
+}
+@media (max-width: 575px) {
+  h1 {
+    line-height: 45px;
+  }
+}
 h2 {
   font-weight: 700;
   font-size: 36px;
@@ -321,7 +332,7 @@ figure {
 }
 
 .footer-logo {
-  max-width: 200px;
+  max-width: 130px;
   min-width: 100px;
 }
 
@@ -2278,8 +2289,8 @@ section {
   gap: 10px;
 }
 .social-box li a {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2291,6 +2302,7 @@ section {
 .social-box li a:hover {
   background-color: rgb(var(--primary-color));
   color: rgb(var(--white));
+  border-color: rgb(var(--primary-color));
 }
 
 .star ul li i {
@@ -4348,43 +4360,6 @@ Cmn table end
   border-color: rgb(var(--black));
 }
 
-.meta {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  font-size: 16px;
-}
-.meta .item {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  text-transform: capitalize;
-  position: relative;
-  font-weight: 500;
-  font-size: 14px;
-  color: rgb(var(--primary-color));
-}
-.meta .item a {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-.meta .item.tag {
-  background-color: var(--bg-color3);
-  padding: 2px 10px;
-  border-radius: 4px;
-}
-
-.rtl .meta .item:not(:last-child)::after {
-  left: auto;
-  right: calc(100% + 22px);
-}
-@media (max-width: 375px) {
-  .rtl .meta .item:not(:last-child)::after {
-    right: calc(100% + 11px);
-  }
-}
-
 /*----------------------------------------------
 Reusable style section end
 ----------------------------------------------*/
@@ -4845,29 +4820,49 @@ Bottom Mobile, Tab nav end
 /*----------------------------------------------
 00. Hero section start
 ----------------------------------------------*/
-.hero-section .hero-description {
+.hero-description {
   font-size: 24px;
   font-weight: 600;
   color: rgb(var(--mostly-desaturated-dark-blue2));
   max-width: 500px;
 }
 
-.hero-feature-item:not(:last-child) .hero-feture-box {
-  border-right: 1px solid var(--border-color2);
+.hero-feature-box-container {
+  margin-top: 100px;
 }
 
-.hero-feture-box {
+.hero-feature-box {
   text-align: center;
 }
-.hero-feture-box .title {
+.hero-feature-box .title {
   font-size: 28px;
   font-weight: 600;
   margin-bottom: 5px;
 }
-.hero-feture-box p {
+.hero-feature-box p {
   color: rgb(var(--dark-grayish-blue));
 }
 
+@media (min-width: 992px) {
+  .hero-feature-item:not(:last-child) .hero-feature-box {
+    border-right: 1px solid var(--border-color2);
+  }
+}
+@media (max-width: 991px) {
+  .hero-content {
+    text-align: center;
+  }
+  .hero-description {
+    margin: 0 auto;
+    font-size: 20px;
+  }
+  .hero-feature-box-container {
+    margin-top: 50px;
+  }
+  .hero-feature-box .title {
+    font-size: 24px;
+  }
+}
 /*----------------------------------------------
 Hero section end
 ----------------------------------------------*/
@@ -4989,6 +4984,9 @@ Hero section end
   .calculator .calculator-body {
     padding: 15px;
   }
+  .calculator .tagline {
+    font-size: 12px;
+  }
 }
 /*----------------------------------------------
 Calculator end
@@ -5050,11 +5048,6 @@ Custom radio container start
   border-color: rgb(var(--primary-color));
 }
 
-@media (max-width: 767px) {
-  .custom-radio-container {
-    margin-top: 30px;
-  }
-}
 /*----------------------------------------------
 Custom radio container end
 ----------------------------------------------*/
@@ -5067,8 +5060,21 @@ About section start
 
 .about-img-box {
   max-width: 550px;
+  margin: 0 auto;
 }
 
+@media (max-width: 991px) {
+  .about-text-box {
+    text-align: center;
+  }
+  .about-text-box .section-title {
+    margin: 0 auto 10px;
+  }
+  .about-img-box {
+    max-width: 450px;
+    margin: 0 auto;
+  }
+}
 /*----------------------------------------------
 About section end
 ----------------------------------------------*/
@@ -5274,7 +5280,7 @@ Why choose us section end
   background: rgb(var(--bg-color1));
   border-radius: 20px;
   transition: var(--transition);
-  border: 2px solid rgb(var(--primary-color), 0.5);
+  border: 2px solid rgb(var(--primary-color), 0.2);
   box-shadow: rgba(44, 91, 255, 0.1) 0px 12px 17px 0px;
 }
 .testimonial-box .text-box {
@@ -5300,7 +5306,7 @@ Why choose us section end
   padding: 1px;
   border-radius: 50%;
   background-color: rgb(var(--white));
-  border: 2px solid rgb(var(--primary-color), 0.5);
+  border: 2px solid rgb(var(--primary-color), 0.2);
 }
 
 .testimonial-carousel .item {
@@ -5389,6 +5395,129 @@ Testimonial end
 Faq end
 ----------------------------------------------*/
 /*----------------------------------------------
+18. Blog section start
+----------------------------------------------*/
+.blog-section {
+  background-image: radial-gradient(50% 50% at 50% 50%, rgba(255, 169, 139, 0.1) 20%, rgba(255, 169, 139, 0) 100%);
+}
+
+.blog-btn {
+  color: var(--heading-color);
+  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+}
+.blog-btn:hover {
+  gap: 10px;
+}
+.blog-btn i {
+  margin-top: 2px;
+}
+
+.blog-box {
+  background: rgb(var(--white));
+  border-radius: 15px;
+  height: 100%;
+  box-shadow: var(--shadow4);
+}
+.blog-box:hover .img-box {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  overflow: hidden;
+}
+.blog-box:hover .img-box img {
+  transform: scale(1);
+}
+.blog-box .img-box {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  overflow: hidden;
+}
+.blog-box .img-box img {
+  transition: var(--transition);
+  transform: scale(1.05);
+  width: 100%;
+  height: 230px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.blog-box .text-box {
+  padding: 25px;
+}
+.blog-box .text-box .para-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+}
+.blog-box .blog-title {
+  margin: 20px 0 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  font-size: 20px;
+  font-weight: 600;
+}
+.blog-box .cmn-btn3 {
+  margin-top: 30px;
+}
+
+.meta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+  font-weight: 500;
+}
+.meta .left-side {
+  display: flex;
+  gap: 5px;
+}
+.meta .left-side .item {
+  background-color: rgb(var(--primary-color), 0.1);
+  border-radius: 9999px;
+  padding: 5px 10px;
+}
+.meta .item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.meta .icon {
+  color: rgb(var(--primary-color));
+}
+
+@media (max-width: 1199px) {
+  .blog-box .text-box {
+    padding: 20px;
+  }
+}
+@media (max-width: 991px) {
+  h5 {
+    font-size: 18px;
+  }
+  .blog-box .blog-author .author-info span {
+    font-size: 14px;
+  }
+}
+.rtl .blog-box .blog-author .author-img {
+  margin-right: 0;
+  margin-left: 10px;
+}
+.rtl .blog-box .blog-btn i {
+  transform: rotate(180deg);
+}
+
+/*----------------------------------------------
+Blog section end
+----------------------------------------------*/
+/*----------------------------------------------
 19. Newsletter section start
 ----------------------------------------------*/
 .newsletter-form {
@@ -5446,8 +5575,8 @@ Newsletter end
   position: relative;
   z-index: 0;
   padding-bottom: 40px;
-  background-color: var(--bg-color4);
-  color: rgb(var(--white-rgb), 0.9);
+  background-color: rgb(var(--bg-color3));
+  color: rgb(var(--white), 0.9);
 }
 .footer-section .footer-widget .widget-title {
   position: relative;
@@ -5455,7 +5584,7 @@ Newsletter end
   text-transform: capitalize;
   font-size: 20px;
   font-family: var(--heading-font);
-  color: rgb(var(--heading-color));
+  color: rgb(var(--white));
 }
 
 .footer-widget .widget-logo {
