--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,6 +73,7 @@ Typography
   --input-color2: #ffffff;
   --bg-color1: 255, 255, 255;
   --bg-color2: 249, 250, 251;
+  --bg-color3: 14, 15, 20;
   --border-color1: rgba(231, 234, 243, 0.7);
   --border-color2: rgba(140, 152, 164, 0.25);
   --shadow1: 0 0.375rem 0.75rem rgba(140, 152, 164, 0.075);
@@ -278,6 +279,16 @@ h1 {
     line-height: 50px;
   }
 }
+@media (max-width: 460px) {
+  h1 {
+    font-size: 32px;
+  }
+}
+@media (max-width: 575px) {
+  h1 {
+    line-height: 45px;
+  }
+}
 
 h2 {
   font-weight: 700;
@@ -345,7 +356,7 @@ figure {
 }
 
 .footer-logo {
-  max-width: 200px;
+  max-width: 130px;
   min-width: 100px;
 }
 
@@ -2681,8 +2692,8 @@ section {
 
   li {
     a {
-      width: 40px;
-      height: 40px;
+      width: 35px;
+      height: 35px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -2694,6 +2705,7 @@ section {
       &:hover {
         background-color: rgb(var(--primary-color));
         color: rgb(var(--white));
+        border-color: rgb(var(--primary-color));
       }
     }
   }
@@ -5366,51 +5378,6 @@ Cmn table end
     border-color: rgb(var(--black));
   }
 }
-
-// Custom check box btn end
-.meta {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  font-size: 16px;
-
-  .item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    text-transform: capitalize;
-    position: relative;
-    font-weight: 500;
-    font-size: 14px;
-    color: rgb(var(--primary-color));
-
-    a {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-
-    &.tag {
-      background-color: var(--bg-color3);
-      padding: 2px 10px;
-      border-radius: 4px;
-    }
-  }
-}
-
-.rtl {
-  .meta .item:not(:last-child)::after {
-    left: auto;
-    right: calc(100% + 22px);
-  }
-
-  @media (max-width: 375px) {
-    .meta .item:not(:last-child)::after {
-      right: calc(100% + 11px);
-    }
-  }
-}
-
 /*----------------------------------------------
 Reusable style section end
 ----------------------------------------------*/
@@ -5932,22 +5899,18 @@ Bottom Mobile, Tab nav end
 /*----------------------------------------------
 00. Hero section start
 ----------------------------------------------*/
-.hero-section {
-  .hero-description {
-    font-size: 24px;
-    font-weight: 600;
-    color: rgb(var(--mostly-desaturated-dark-blue2));
-    max-width: 500px;
-  }
+
+.hero-description {
+  font-size: 24px;
+  font-weight: 600;
+  color: rgb(var(--mostly-desaturated-dark-blue2));
+  max-width: 500px;
 }
-.hero-feature-item {
-  &:not(:last-child) {
-    .hero-feture-box {
-      border-right: 1px solid var(--border-color2);
-    }
-  }
+.hero-feature-box-container {
+  margin-top: 100px;
 }
-.hero-feture-box {
+
+.hero-feature-box {
   text-align: center;
   .title {
     font-size: 28px;
@@ -5958,6 +5921,32 @@ Bottom Mobile, Tab nav end
     color: rgb(var(--dark-grayish-blue));
   }
 }
+// Responsive hero section start
+@media (min-width: 992px) {
+  .hero-feature-item {
+    &:not(:last-child) {
+      .hero-feature-box {
+        border-right: 1px solid var(--border-color2);
+      }
+    }
+  }
+}
+@media (max-width: 991px) {
+  .hero-content {
+    text-align: center;
+  }
+  .hero-description {
+    margin: 0 auto;
+    font-size: 20px;
+  }
+  .hero-feature-box-container {
+    margin-top: 50px;
+  }
+  .hero-feature-box .title {
+    font-size: 24px;
+  }
+}
+// Responsive hero section end
 /*----------------------------------------------
 Hero section end
 ----------------------------------------------*/
@@ -6093,8 +6082,13 @@ Hero section end
 }
 // Responsive calculator section start
 @media (max-width: 575px) {
-  .calculator .calculator-body {
-    padding: 15px;
+  .calculator {
+    .calculator-body {
+      padding: 15px;
+    }
+    .tagline {
+      font-size: 12px;
+    }
   }
 }
 
@@ -6172,11 +6166,6 @@ Custom radio container start
 }
 
 // Responsive custom radio container start
-@media (max-width: 767px) {
-  .custom-radio-container {
-    margin-top: 30px;
-  }
-}
 
 // Responsive custom radio container end
 /*----------------------------------------------
@@ -6195,7 +6184,22 @@ About section start
 }
 .about-img-box {
   max-width: 550px;
+  margin: 0 auto;
 }
+// Responsive about section stat
+@media (max-width: 991px) {
+  .about-text-box {
+    text-align: center;
+    .section-title {
+      margin: 0 auto 10px;
+    }
+  }
+  .about-img-box {
+    max-width: 450px;
+    margin: 0 auto;
+  }
+}
+// Responsive about section end
 /*----------------------------------------------
 About section end
 ----------------------------------------------*/
@@ -6452,7 +6456,7 @@ Why choose us section end
   background: rgb(var(--bg-color1));
   border-radius: 20px;
   transition: var(--transition);
-  border: 2px solid rgb(var(--primary-color), 0.5);
+  border: 2px solid rgb(var(--primary-color), 0.2);
   box-shadow: rgba(44, 91, 255, 0.1) 0px 12px 17px 0px;
   .text-box {
     font-size: 20px;
@@ -6478,7 +6482,7 @@ Why choose us section end
       padding: 1px;
       border-radius: 50%;
       background-color: rgb(var(--white));
-      border: 2px solid rgb(var(--primary-color), 0.5);
+      border: 2px solid rgb(var(--primary-color), 0.2);
     }
   }
 }
@@ -6599,6 +6603,166 @@ Faq end
 ----------------------------------------------*/
 
 /*----------------------------------------------
+18. Blog section start
+----------------------------------------------*/
+.blog-section {
+  background-image: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(255, 169, 139, 0.1) 20%,
+    rgba(255, 169, 139, 0) 100%
+  );
+}
+.blog-btn {
+  color: var(--heading-color);
+  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+
+  &:hover {
+    gap: 10px;
+  }
+
+  i {
+    margin-top: 2px;
+  }
+}
+
+.blog-box {
+  background: rgb(var(--white));
+  border-radius: 15px;
+  height: 100%;
+  box-shadow: var(--shadow4);
+
+  &:hover {
+    .img-box {
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+      overflow: hidden;
+
+      img {
+        transform: scale(1);
+      }
+    }
+  }
+
+  .img-box {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    overflow: hidden;
+
+    img {
+      transition: var(--transition);
+      transform: scale(1.05);
+      width: 100%;
+      height: 230px;
+      object-fit: cover;
+    }
+  }
+
+  .text-box {
+    padding: 25px;
+
+    .para-text {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-box-orient: vertical;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      line-clamp: 3;
+    }
+  }
+
+  .blog-title {
+    margin: 20px 0 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .cmn-btn3 {
+    margin-top: 30px;
+  }
+}
+
+.meta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+  font-weight: 500;
+
+  .left-side {
+    display: flex;
+    gap: 5px;
+
+    .item {
+      background-color: rgb(var(--primary-color), 0.1);
+      border-radius: 9999px;
+      padding: 5px 10px;
+    }
+  }
+
+  .item {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+
+  .icon {
+    color: rgb(var(--primary-color));
+  }
+}
+
+// Responsive blog  start
+@media (max-width: 1199px) {
+  .blog-box {
+    .text-box {
+      padding: 20px;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  h5 {
+    font-size: 18px;
+  }
+
+  .blog-box {
+    .blog-author .author-info span {
+      font-size: 14px;
+    }
+  }
+}
+
+// Responsive blog end
+
+// Rtl blog start
+.rtl .blog-box {
+  .blog-author {
+    .author-img {
+      margin-right: 0;
+      margin-left: 10px;
+    }
+  }
+
+  .blog-btn i {
+    transform: rotate(180deg);
+  }
+}
+
+// Rtl blog end
+
+/*----------------------------------------------
+Blog section end
+----------------------------------------------*/
+
+/*----------------------------------------------
 19. Newsletter section start
 ----------------------------------------------*/
 .newsletter-form {
@@ -6669,8 +6833,8 @@ Newsletter end
   position: relative;
   z-index: 0;
   padding-bottom: 40px;
-  background-color: var(--bg-color4);
-  color: rgb(var(--white-rgb), 0.9);
+  background-color: rgb(var(--bg-color3));
+  color: rgb(var(--white), 0.9);
 
   .footer-widget {
     .widget-title {
@@ -6679,7 +6843,7 @@ Newsletter end
       text-transform: capitalize;
       font-size: 20px;
       font-family: var(--heading-font);
-      color: rgb(var(--heading-color));
+      color: rgb(var(--white));
     }
   }
 }
