--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -994,7 +994,8 @@ body::-webkit-scrollbar-thumb {
   left: 0;
   transform: translateX(-100%);
   transition: var(--transition);
-  width: 320px;
+  width: 100%;
+  max-width: 320px;
   z-index: 0;
   &.active {
     transform: none;
@@ -1044,8 +1045,8 @@ body::-webkit-scrollbar-thumb {
 // Calculator sidebar end
 
 // Currency select sidebar start
-.currency-select-sidebar{
-  background-color: rgb(var(--bg-color1)); 
+.currency-select-sidebar {
+  background-color: rgb(var(--bg-color1));
   position: absolute;
   top: 0;
   left: 0;
@@ -1053,14 +1054,80 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   transform: translateY(100%);
   transition: var(--transition);
-  &.active{
+  &.active {
     transform: none;
+    &::after {
+      content: "";
+      background-color: rgb(var(--bg-color4), 0.9);
+      height: 100%;
+      width: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
   }
 }
-.currency-select-sidebar-header{
+.currency-select-sidebar-header {
   padding: 15px 20px;
   border-bottom: 1px solid var(--border-color1);
 }
+.currency-select-sidebar-body {
+  padding: 20px;
+  max-height: 500px;
+  overflow: auto;
+}
+.currency-select-sidebar-inner {
+  background-color: rgb(var(--bg-color1));
+  height: 100%;
+}
+
+.currency-list {
+  .item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border-radius: 2px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgb(var(--primary-color), 0.1);
+    }
+  }
+
+  .item:not(:last-child) {
+    border-bottom: 1px solid var(--border-color1);
+  }
+
+  .left-side {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    .text-area {
+      font-size: 13px;
+
+      .title {
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 600;
+      }
+
+      .sub-title {
+        text-transform: capitalize;
+      }
+    }
+  }
+
+  .right-side {
+    i {
+      font-size: 20px;
+      color: rgb(var(--primary-color));
+    }
+  }
+}
+
 // Currency select sidebar end
 
 // Cmn-btn-start
@@ -2700,31 +2767,37 @@ Cmn tab section start
 ----------------------------------------------*/
 
 .cmn-tabs .nav-pills {
-  display: inline-flex;
   gap: 10px;
-  background-color: var(--bg-color2);
-  padding: 7px;
-  border-radius: 40px;
+  background-color: rgb(var(--bg-color3));
+  padding: 4px;
+  border-radius: 10px;
+  flex-grow: 1;
+  max-width: 500px;
+}
+.cmn-tabs .nav-item{
+  flex-grow: 1;
 }
 
 .cmn-tabs .nav-pills .nav-link {
-  padding: 8px 20px;
+  padding: 12px;
   text-transform: capitalize;
-  color: rgb(var(--heading-color));
   font-family: var(--heading-font);
+  color: rgb(var(--body-color));
+  color: rgb(var(--Very-dark-grayish-blue));
   width: 100%;
-  border-radius: 9999px;
+  border-radius: 8px;
   font-size: 16px;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 7px;
   font-weight: 500;
 }
 
 .cmn-tabs .nav-pills .nav-link.active,
 .cmn-tabs .nav-pills .show > .nav-link {
-  background: rgb(var(--primary-color));
-  color: rgb(var(--white));
+  background: rgb(var(--white));
+  color: rgb(var(--heading-color));
 }
 
 /*----------------------------------------------
